docs/examples/monitoring/demo-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: demo
spec:
  type: LoadBalancer
  ports:
  - name: web
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
