docs/examples/monitoring/demo-3.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: demo
  annotations:
    ingress.appscode.com/stats: 'true'
    ingress.appscode.com/monitoring-agent: 'coreos-prometheus-operator'
    ingress.appscode.com/service-monitor-labels: '{"app": "voyager"}'
    ingress.appscode.com/service-monitor-namespace: 'demo'
spec:
  backend:
    serviceName: test-server
    servicePort: 80
  rules:
  - host: voyager.demo
    http:
      paths:
      - backend:
          serviceName: test-server
          servicePort: 80
