docs/examples/monitoring/demo-4.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: demo
  annotations:
    ingress.appscode.com/stats: 'true'
    ingress.appscode.com/monitoring-agent: 'prometheus-builtin'
spec:
  backend:
    serviceName: test-server
    servicePort: 80
  rules:
  - host: voyager.demo
    http:
      paths:
      - backend:
          serviceName: test-server
          servicePort: 80
